ui-testing task (#13)
Co-authored-by: “Valeryia <“valeryia_kazlova@epam.com“>